correct micro flex
Откорректированы микросетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
-    <header class="main-header">
+    <header class="main-header inner-header">
       <div class="container">
         <div class="header-top">
           <a href="">
-            <img src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
+            <img class="header-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
           </a>
         </div>
         <div class="header-middle">
@@ -38,13 +38,15 @@
             </ul>
           </div>
         </div>
-        <div class="header-bottom">
+        <div class="header-bottom header-bottom-inner">
           <div class="menu">
-            <a class="menu-link" href="catalog.html">Каталог товаров</a>
-            <button class="button-dropdown">
+            <div class="menu-nav">
+              <a class="menu-link" href="catalog.html">Каталог товаров</a>
+              <button class="button-dropdown">
               <span class="visually-hidden">Раскрывающийся список товаров</span>
-            </button>
-            <nav class="navigation">
+              </button>
+            </div>
+            <nav class="navigation navigation-active">
               <h2 class="visually-hidden">Каталог товаров</h2>
               <ul class="navigation-list">
                 <li class="navigation-item">
@@ -56,12 +58,16 @@
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Экшн-камеры</a>
                 </li>
+              </ul>
+              <ul class="navigation-list">
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Фитнес-браслеты</a>
                 </li>
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Умные часы</a>
                 </li>
+              </ul>
+              <ul class="navigation-list">
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Квадрокоптеры</a>
                 </li>
@@ -144,7 +150,7 @@
               Нет
               </label>
             </fieldset>
-            <button class="button main-link" type="submit">Показать</button>
+            <button class="button button-filter" type="submit">Показать</button>
           </form>
           <div class="catalog-inner-column">
             <form class="catalog-inner-sorting" action="https://echo.htmlacademy.ru/" method="get">
