--- a/5/index.html
+++ b/5/index.html
@@ -12,36 +12,24 @@
       <div class="container">
         <div class="header-top">
           <a href="">
-            <img src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
+            <img class="header-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
           </a>
         </div>
         <div class="header-middle">
-          <div class="menu-user">
-            <ul class="menu-user-list">
-              <li class="menu-user-item">
-                <form class="menu-user-form" action="https://echo.htmlacademy.ru/" method="post">
-                  <label><input type="text" name="search" value="Текст поиска">
-                  </label>
-                  <button class="button-search">
-                    <a class="menu-user-link" href="#">Найти</a>
-                  </button>
-                </form>
-              </li>
-              <li class="menu-user-item">
-                <button class="button-log">
-                  <a class="menu-user-link" href="#">Войти</a>
-                </button>
-                <button class="button-log">
-                  <a class="menu-user-link" href="#">Выйти</a>
-                </button>
-                <button class="button-log">
-                  <a class="menu-user-link" href="#">Имя пользователя</a>
-                </button>
-              </li>
-            </ul>
+          <div class="menu-search-log">
+            <form class="menu-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label><input type="text" name="search" value="Текст поиска">
+              </label>
+              <button class="button-search">Найти</button>
+            </form>
+            <div class="account">
+              <button class="button-login">Войти</button>
+              <a class="account-name-link" href="#">Коля Петухов</a>
+              <button class="button-logout">Выйти</button>
+            </div>
           </div>
           <div class="menu-user">
-            <ul class="menu-user-list menu-user-list-action">
+            <ul class="menu-user-list">
               <li class="menu-user-item">
                 <a class="menu-user-link" href="#">Сравнить</a>
               </li>
@@ -53,11 +41,13 @@
         </div>
         <div class="header-bottom">
           <div class="menu">
-            <a class="menu-link" href="catalog.html">Каталог товаров</a>
-            <button class="button-dropdown">
+            <div class="menu-nav">
+              <a class="menu-link" href="catalog.html">Каталог товаров</a>
+              <button class="button-dropdown">
               <span class="visually-hidden">Раскрывающийся список товаров</span>
-            </button>
-            <nav class="navigation">
+              </button>
+            </div>
+            <nav class="navigation navigation-active">
               <h2 class="visually-hidden">Каталог товаров</h2>
               <ul class="navigation-list">
                 <li class="navigation-item">
@@ -69,12 +59,16 @@
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Экшн-камеры</a>
                 </li>
+              </ul>
+              <ul class="navigation-list">
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Фитнес-браслеты</a>
                 </li>
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Умные часы</a>
                 </li>
+              </ul>
+              <ul class="navigation-list">
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Квадрокоптеры</a>
                 </li>
@@ -119,7 +113,7 @@
               <div class="slider-descr">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
               </div>
               <div class="slider-line">
-                <a class="main-link" href="catalog.html">Подробнее</a>
+              <a class="slider-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -150,7 +144,7 @@
               </ul>
             </div>
           </div>
-          <div class="slider-item">
+          <div class="slider-item ">
             <div class="slider-gallery">
               <button class="slider-button slider-prev">
                 <span class="visually-hidden">Предыдущая страница</span>
@@ -163,11 +157,11 @@
             <div class="slider-wrapper">
               <h3 class="visually-hidden">Фитнес-браслет</h3>
               <div class="slider-number">02</div>
-              <div class="slider-subtitle">Худеем правильно!</div>
+              <div class="slider-subtitle">Худеем <br>правильно!</div>
               <div class="slider-descr">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
               </div>
               <div class="slider-line">
-                <a class="main-link" href="catalog.html">Подробнее</a>
+                <a class="slider-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -194,7 +188,7 @@
               </ul>
             </div>
           </div>
-          <div class="slider-item">
+          <div class="slider-item ">
             <div class="slider-gallery">
               <button class="slider-button slider-prev">
                 <span class="visually-hidden">Предыдущая страница</span>
@@ -212,7 +206,7 @@
               <div class="slider-descr">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
               </div>
               <div class="slider-line">
-                <a class="main-link" href="catalog.html">Подробнее</a>
+                <a class="slider-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -264,7 +258,7 @@
             <li class="catalog-item">
               <a class="catalog-link" href="catalog.html">
                 <div class="catalog-item-img"></div>
-                <h3 class="catalog-item-subtitle">Моноподы
+                <h3 class="catalog-item-subtitle">Моноподы<br>
                 для селфи</h3>
               </a>
             </li>
@@ -300,9 +294,9 @@
           <h2 class="visually-hidden">Услуги</h2>
           <div class="service-column">
             <ul class="service-list">
-              <li class="service-item"><a class="main-link main-link-current" href="#delivery">Доставка</a></li>
-              <li class="service-item"><a class="main-link" href="#guarantee">Гарантия</a></li>
-              <li class="service-item"><a class="main-link" href="#credit">Кредит</a></li>
+              <li class="service-item"><button class="button-service button-service-current">Доставка</button></li>
+              <li class="service-item"><button class="button-service">Гарантия</button></li>
+              <li class="service-item"><button class="button-service">Кредит</button></li>
             </ul>
             <div class="service-wrapper">
               <div class="service-item-wrapper service-item-wrapper-current">
@@ -325,18 +319,16 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="order">
         <div class="container">
-          <div class="order">
-            <h3 class="visually-hidden">Доставка под заказ</h3>
-            <button class="order-button">Доставим редкий товар под заказ</button>
-          </div>
+          <h3 class="visually-hidden">Доставка под заказ</h3>
+          <button class="order-button">Доставим редкий товар под заказ</button>
         </div>
       </section>
-      <div class="index-column">
+      <section class="information">
         <div class="container">
-          <section class="about">
-            <h2 class="title">О нас</h2>
+          <div class="about">
+            <h2 class="about-title">О нас</h2>
             <div class="about-descr">
               <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
               <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
@@ -345,11 +337,11 @@
                 <li class="transport-item"><b>СДИК</b></li>
                 <li class="transport-item"><b>ТоксБерри</b></li>
               </ul>
-              <a  class="main-link"href="#">Подробнее о нас</a>
+              <a  class="about-link" href="#">Подробнее о нас</a>
             </div>
-          </section>
-          <section class="contacts">
-            <h2 class="title">Контакты</h2>
+          </div>
+          <div class="contacts">
+            <h2 class="contacts-title">Контакты</h2>
             <div class="contacts-descr">Вы можете забрать товар сами, заехав в наш офис.
               <br>Заодно сможете проверить работоспособность покупки. </div>
             <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
@@ -362,10 +354,10 @@
               <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
               <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
             </ul>
-            <button class="main-link">Напишите нам</button>
-          </section>
+            <button class="button-contacts">Напишите нам</button>
+          </div>
         </div>
-      </div>
+      </section>
       <section class="mailing">
         <div class="container">
           <div class="mailing-wrapper">
@@ -374,10 +366,10 @@
             <div class="mailing-descr">Еженедельный дайджест с обзорами новинок,
                 длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</div>
           </div>
-          <div class="mailing-wrapper">
+          <div class="mailing-form">
             <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
               <input type="email" name="email" value="Ваш e-mail">
-              <button class="button" type="submit">Подписаться</button>
+              <button class="button-mail" type="submit">Подписаться</button>
             </form>
             <p>Это бесплатно</p>
           </div>
@@ -404,8 +396,6 @@
             </div>
           </div>
           <div class="footer-bottom">
-            <div class="footer-line">
-            </div>
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="https://wwww.facebook.com/htmlacademy">
