correct footer-menu inner-page

--- a/catalog.html
+++ b/catalog.html
@@ -256,10 +256,10 @@
             <p class="footer-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </div>
           <ul class="footer-menu-list">
-              <li><a class="service-item footer-menu-item" href="#delivery">Доставка</a></li>
-              <li><a class="service-item footer-menu-item" href="#delivery">Гарантия</a></li>
-              <li><a class="service-item footer-menu-item" href="#delivery">Кредит</a></li>
-          </ul>
+            <li class="footer-menu-item"><a class="footer-menu-link" href="#delivery">Доставка</a></li>
+            <li class="footer-menu-item"><a class="footer-menu-link" href="#delivery">Гарантия</a></li>
+            <li class="footer-menu-item"><a class="footer-menu-link" href="#delivery">Кредит</a></li>
+        </ul>
           <div class="address">
             <a class="footer-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
           </div>
