--- a/catalog.html
+++ b/catalog.html
@@ -59,52 +59,52 @@
           </div>
         </div>
         <div class="header-bottom header-bottom-inner">
-          <div class="menu">
-            <div class="menu-nav">
-              <a class="menu-link" href="catalog.html">Каталог товаров</a>
+          <div class="menu-nav">
+            <a class="menu-button" href="#">
+              <span>Каталог товаров</span>
               <button class="button-dropdown">
-              <span class="visually-hidden">Раскрывающийся список товаров</span>
+                <span class="visually-hidden">Раскрывающийся список товаров</span>
               </button>
-            </div>
-            <ul class="menu-list">
-              <li class="menu-item">
-                <a class="menu-link" href="#delivery">Доставка</a>
-              </li>
-              <li class="menu-item">
-                <a class="menu-link" href="#guarantee">Гарантия</a>
-              </li>
-              <li class="menu-item">
-                <a class="menu-link" href="#contacts">Контакты</a>
-              </li>
-            </ul>
+            </a>
+            <nav class="navigation navigation-active">
+              <h2 class="visually-hidden">Каталог товаров</h2>
+              <ul class="navigation-list">
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Виртуальная реальность</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Моноподы для cелфи</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Экшн-камеры</a>
+                </li>
+              </ul>
+              <ul class="navigation-list">
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Умные часы</a>
+                </li>
+              </ul>
+              <ul class="navigation-list">
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Квадрокоптеры</a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <nav class="navigation navigation-active">
-            <h2 class="visually-hidden">Каталог товаров</h2>
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Виртуальная реальность</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Моноподы для cелфи</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Экшн-камеры</a>
-              </li>
-            </ul>
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Фитнес-браслеты</a>
-              </li>
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Умные часы</a>
-              </li>
-            </ul>
-            <ul class="navigation-list">
-              <li class="navigation-item">
-                <a class="navigation-link" href="#">Квадрокоптеры</a>
-              </li>
-            </ul>
-          </nav>
+          <ul class="menu-list">
+            <li class="menu-item">
+              <a class="menu-link" href="#delivery">Доставка</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#guarantee">Гарантия</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="#contacts">Контакты</a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
