--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <svg class="menu-icon" aria-hidden="true" focusable="false" width="16" height="17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="m15.7 14.69-3.1-3.1c.9-1.2 1.4-2.6 1.4-4.2 0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.39c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z"/>
               </svg>
-              <input type="text" name="search" placeholder="Поиск по сайту">
+              <input type="search" name="search" placeholder="Поиск по сайту">
               <button class="button-search" type="submit">Найти</button>
             </form>
             <div class="account">
@@ -48,8 +48,8 @@
                   Сравнить</a>
               </li>
               <li class="menu-user-item">
-                <a class="menu-user-link" href="#">
-                  <svg class="menu-user-icon" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <a class="menu-user-link menu-user-link-cart" href="#">
+                  <svg class="menu-user-icon menu-user-icon-cart" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="m15.3 5.39-3.5.2L8.6.69c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM8 2.29l2.2 3.2H5.9L8 2.29Z" f/>
                   </svg>
                   Корзина</a>
@@ -182,17 +182,17 @@
                 <ol class="slider-pagination">
                   <li class="slider-pagination-item">
                     <button class="slider-pagination-button slider-pagination-button-current">
-                      <span class="visually-hidden">Первый слайдер</span>
+                      <span class="visually-hidden">Первый слайд</span>
                     </button>
                   </li>
                   <li class="slider-pagination-item">
                     <button class="slider-pagination-button">
-                      <span class="visually-hidden">Второй слайдер</span>
+                      <span class="visually-hidden">Второй слайд</span>
                     </button>
                   </li>
                   <li class="slider-pagination-item">
                     <button class="slider-pagination-button">
-                      <span class="visually-hidden">Третий слайдер</span>
+                      <span class="visually-hidden">Третий слайд</span>
                     </button>
                   </li>
                 </ol>
@@ -368,26 +368,6 @@
         <div class="container">
           <h3 class="visually-hidden">Доставка под заказ</h3>
           <button class="order-button">Доставим редкий товар под заказ</button>
-          <form class="order-form order-form-active" action="https://echo.htmlacademy.ru/" method="POST" >
-            <h3 class="order-form-title">Доставка под заказ</h3>
-            <p class="order-form-name">
-              <label for="form-name">Ваше имя:</label>
-              <input id="form-name" type="text" value="Введите имя">
-            </p>
-            <p class="order-form-mail">
-              <label for="form-mail">Ваш e-mail:</label>
-              <input id="form-mail" type="email" value="почта">
-            </p>
-            <p class="order-form-text">
-              <label for="form-text">Что нужно привезти:</label>
-              <input id="form-text" type="text" value="В свободной форме">
-            </p>
-            <p class="order-form-number">
-              <label for="form-number">Количество:</label>
-              <input id="form-number" type="number" value="1">
-            </p>
-            <button class="order-form-button" type="submit">Отправить</button>
-          </form>
         </div>
       </section>
       <section class="information">
