--- a/catalog.html
+++ b/catalog.html
@@ -49,8 +49,8 @@
                   Сравнить</a>
               </li>
               <li class="menu-user-item">
-                <a class="menu-user-link" href="#">
-                  <svg class="menu-user-icon" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <a class="menu-user-link menu-user-link-cart" href="#">
+                  <svg class="menu-user-icon menu-user-icon-cart" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="m15.3 5.39-3.5.2L8.6.69c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM8 2.29l2.2 3.2H5.9L8 2.29Z" f/>
                   </svg>
                   Корзина</a>
@@ -177,7 +177,7 @@
                 <option value="popular">Популярные</option>
               </select>
               <div class="sort-up">
-                <button class="sort-up-button">
+                <button class="sort-up-button" type="button">
                   <svg class="sort-up-icon" aria-hidden="true" focusable="false" width="12" height="10" viewBox="0 0 12 10" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#a)">
                       <path d="m6 0 5.5 10H.5"/>
@@ -189,7 +189,7 @@
                     </defs>
                   </svg>
                 </button>
-                <button class="sort-up-button">
+                <button class="sort-up-button" type="button">
                   <svg class="sort-up-icon" aria-hidden="true" focusable="false" width="12" height="10" viewBox="0 0 12 10" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g  clip-path="url(#a)">
                       <path d="m6 0 5.5 10H.5"/>
