--- a/index.html
+++ b/index.html
@@ -52,7 +52,37 @@
                   <svg class="menu-user-icon menu-user-icon-cart" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="m15.3 5.39-3.5.2L8.6.69c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM8 2.29l2.2 3.2H5.9L8 2.29Z" f/>
                   </svg>
-                  Корзина</a>
+                  Корзина
+                </a>
+                <div class="popover popover-close">
+                  <div class="popover-content">
+                    <ul class="popover-list">
+                      <li class="popover-item">
+                        <a class="popover-link" href="#">
+                          <img class="popover-img" src="images/products/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка">
+                          <div class="popover-descr">
+                            Любительская селфи-палка
+                          </div>
+                        </a>
+                        <button class="popover-close-button"></button>
+                      </li>
+                      <li class="popover-item">
+                        <a class="popover-link" href="#">
+                          <img class="popover-img" src="images/products/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
+                          <div class="popover-descr">
+                            Профессиональная селфи-палка
+                          </div>
+                        </a>
+                        <button class="popover-close-button"></button>
+                      </li>
+                    </ul>
+                    <div class="popover-result">
+                      <div class="popover-descr popover-descr-product">Товаров: <span class="popover-amount">2</span></div>
+                      <div class="popover-descr popover-descr-sum">Сумма: <span class="popover-price">2000</span> ₽</div>
+                    </div>
+                    <button class="open-cart-button">Открыть корзину</button>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
@@ -95,13 +125,13 @@
           </div>
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="#delivery">Доставка</a>
+              <a class="menu-link menu-link-current" href="#service">Доставка</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#guarantee">Гарантия</a>
+              <a class="menu-link menu-link-current" href="#service">Гарантия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#contacts">Контакты</a>
+              <a class="menu-link menu-link-current" href="#service">Контакты</a>
             </li>
           </ul>
         </div>
@@ -337,7 +367,7 @@
       <section class="service">
         <div class="container">
           <h2 class="visually-hidden">Услуги</h2>
-          <div class="service-column">
+          <div class="service-column" id="service">
             <ul class="service-list">
               <li class="service-item service-item-current"><button class="button-service button-service-current">Доставка</button></li>
               <li class="service-item"><button class="button-service">Гарантия</button></li>
@@ -350,7 +380,7 @@
                   к вашему подъезду совершенно бесплатно! Ведь
                   мы неплохо заработаем, поднимая его на ваш этаж.</div>
               </div>
-              <div class="service-wrapper-item service-wrapper-item-guarantee"  id="guarantee">
+              <div class="service-wrapper-item service-wrapper-item-guarantee" id="guarantee">
                 <h3 class="service-item-subtitle">Гарантия</h3>
                 <div class="service-item-descr">Если из-за возгорания купленного у нас товара у вас
                   сгорит дом — не переживайте, мы выдадим вам новый.
@@ -478,6 +508,57 @@
           </div>
         </div>
       </footer>
+      <div class="modal-container modal-container-close">
+        <section class="modal-order">
+          <div class="modal-order-wrapper">
+            <h3 class="order-form-title">Доставка под заказ</h3>
+            <button class="modal-close-button">
+              <span class="visually-hidden">Закрыть</span>
+            </button>
+          </div>
+          <form class="order-form" action="https://echo.htmlacademy.ru/" method="POST" >
+            <p class="order-form-name">
+              <label class="form-label" for="form-name">Ваше имя:
+              </label>
+              <input class="form-input form-input-name" id="form-name" type="text" name="name" placeholder="Введите имя">
+              <span class="form-message">Добавьте имя</span>
+            </p>
+            <p class="order-form-mail">
+              <label class="form-label" for="form-mail">Ваш e-mail:</label>
+              <input class="form-input form-input-mail" id="form-mail" type="email" name="mail" placeholder="почта">
+              <span class="form-message">Забавный у вас адрес</span>
+            </p>
+            <p class="order-form-text">
+              <label class="form-label" for="form-text">Что нужно привезти:</label>
+              <input class="form-input" id="form-text" type="text" name="additional" placeholder="В свободной форме">
+            </p>
+            <p class="order-form-number">
+              <span class="form-label">
+                <label class="form-label" for="form-number">Количество</label>
+                <span class="tooltip">
+                  <button class="tooltip-button" aria-labelledby="tooltip-label">
+                    <svg aria-hidden="true" focusable="false" idth="4" height="12" viewBox="0 0 4 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M3 0H1v2h2V0ZM3 4H1v8h2V4Z" />
+                    </svg>
+                  </button>
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label">
+                    Постараемся найти, сколько нужно. <br>Привезём сколько получится по требованиям
+  к провозу багажа.
+                  </span>
+                </span>
+              </span>
+              <button class="number-button number-button-minus" type="button">
+                <span class="visually-hidden">Уменьшить количество</span>
+              </button>
+              <input class="form-input form-input-number" id="form-number" type="number" nume="count" placeholder="1">
+              <button class="number-button number-button-plus" type="button">
+                <span class="visually-hidden">Увеличить количество</span>
+              </button>
+            </p>
+            <button class="order-form-button" type="submit">Отправить</button>
+          </form>
+        </section>
+      </div>
     </main>
   </body>
 </html>
