correct nav menu
Отредактирована сетка в header, исправлено поведение выпадающего подменю

--- a/catalog.html
+++ b/catalog.html
@@ -101,24 +101,20 @@
                   <a class="navigation-link" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="navigation-item">
-                  <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
-                </li>
-                <li class="navigation-item">
-                  <a class="navigation-link" href="#">Экшн-камеры</a>
-                </li>
-              </ul>
-              <ul class="navigation-list">
-                <li class="navigation-item">
                   <a class="navigation-link" href="#">Фитнес-браслеты</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="#">Квадрокоптеры</a>
+                </li>
+                <li class="navigation-item">
+                  <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
                 </li>
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Умные часы</a>
                 </li>
-              </ul>
-              <ul class="navigation-list">
-                <li class="navigation-item">
-                  <a class="navigation-link" href="#">Квадрокоптеры</a>
-                </li>
+                <li class="navigation-item navigation-item-1">
+                  <a class="navigation-link" href="#">Экшн-камеры</a>
+                </li>       
               </ul>
             </nav>
           </div>
@@ -127,7 +123,13 @@
               <a class="menu-link menu-link-current" href="index.html#service">Доставка</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link menu-link-current" href="index.html#service">Гарантия</a>
+              <a class="menu-link menu-link-current" href="index.html#service">Гарантия </a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link menu-link-current" href="index.html#service">Контакты</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link menu-link-current" href="index.html#service">Гарантия </a>
             </li>
             <li class="menu-item">
               <a class="menu-link menu-link-current" href="index.html#service">Контакты</a>
@@ -163,7 +165,7 @@
               <legend class="catalog-inner-filter-subtitle catalog-inner-filter-subtitle-price">Стоимость</legend>
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left: 0; width: 128px;">
+                  <div class="range-bar" style="left: 0; width: 119px;">
                     <button class="range-toggle range-toggle-min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену</span>
                     </button>
